--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "1.18.2"
+  },
+  "engines": {
+    "node": ">=10.16.0",
+    "yarn": ">=1.19.1"
   }
 }
